<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="3dp"

    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_source_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="28sp"
            tools:text="BBC news" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_dialog_source_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="sports" />

            <TextView
                android:id="@+id/tv_dialog_source_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/colorDarkGray"
                android:textSize="20sp"
                tools:text="AAAA AAAA aaaaaa aaaaaaa aaaaa aaaa aaaaaaa aaaaaaaaaaa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dialog_source_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_dialog_source_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_item_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_dialog_source_browser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:foreground="@drawable/xml_selector_trans_accent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/open_in_browser_icon"
                        android:paddingBottom="6dp"
                        android:paddingEnd="6dp"
                        android:paddingStart="6dp"
                        android:paddingTop="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_open_in_browser_56dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_in_browser" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dialog_source_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:foreground="@drawable/xml_selector_trans_accent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tv_dialog_source_share"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/share_icon"
                        android:foreground="@drawable/xml_selector_trans_accent"
                        android:paddingBottom="6dp"
                        android:paddingEnd="6dp"
                        android:paddingStart="8dp"
                        android:paddingTop="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_share_black_56dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>


