<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:id="@+id/ll_item_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="@drawable/xml_selector_trans_accent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tv_item_source_browser"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/open_in_browser_icon"
            android:foreground="@drawable/xml_selector_trans_accent"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_open_in_browser_white_56dp" />

        <TextView
            android:id="@+id/tv_item_source_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:padding="4dp"
            android:text="BBC-News"
            android:textColor="@color/colorWhite"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/tv_item_source_share"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/share_icon"
            android:foreground="@drawable/xml_selector_trans_accent"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_share_white_56dp" />


        <ImageView
            android:id="@+id/tv_item_source_info"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/information_icon"
            android:foreground="@drawable/xml_selector_trans_accent"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:paddingStart="8dp"
            android:paddingTop="6dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_info_56dp" />


    </LinearLayout>

</android.support.v7.widget.CardView>