<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="memsa.ahmed.news.Fragments.IntroFavoriteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Please select your Three favorite news souces :"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favorite_source_one"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/favorite_source_one_progress"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_source_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favorite_source_two"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/favorite_source_two_progress"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>


    <Spinner
        android:id="@+id/spinner_source_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favorite_source_three"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/favorite_source_three_progress"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_source_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
