<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"

    tools:context="memsa.ahmed.news.Fragments.FavoritesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"

                    android:background="@drawable/xml_layout_one_corners"
                    android:gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_title_source_one"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="favorite source one"
                        android:textColor="@color/colorDarkGray"

                        android:textSize="20sp" />

                    <ProgressBar
                        android:id="@+id/progress_bar_source_one"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp" />

                    <ImageView
                        android:id="@+id/favorite_source_one_edit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/edit_favorite_source_one"
                        android:foreground="@drawable/xml_selector_trans_accent"
                        android:paddingBottom="6dp"
                        android:paddingEnd="6dp"
                        android:paddingStart="6dp"
                        android:paddingTop="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_edit_white_24dp" />


                </LinearLayout>
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_source_one"
                android:layout_width="match_parent"

                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingBottom="10dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/xml_layout_one_corners"
                    android:gravity="center"

                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_title_source_two"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="favorite source two"
                        android:textColor="@color/colorDarkGray"

                        android:textSize="20sp" />

                    <ProgressBar
                        android:id="@+id/progress_bar_source_two"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp" />

                    <ImageView
                        android:id="@+id/favorite_source_two_edit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/edit_favorite_source_two"
                        android:foreground="@drawable/xml_selector_trans_accent"
                        android:paddingBottom="6dp"
                        android:paddingEnd="6dp"
                        android:paddingStart="6dp"
                        android:paddingTop="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_edit_white_24dp" />

                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_source_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingBottom="10dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/xml_layout_one_corners"
                    android:gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_title_source_three"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="favorite source three"
                        android:textColor="@color/colorDarkGray"

                        android:textSize="20sp" />

                    <ProgressBar
                        android:id="@+id/progress_bar_source_three"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp" />

                    <ImageView
                        android:id="@+id/favorite_source_three_edit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/edit_favorite_source_three"
                        android:foreground="@drawable/xml_selector_trans_accent"
                        android:paddingBottom="6dp"
                        android:paddingEnd="6dp"
                        android:paddingStart="6dp"
                        android:paddingTop="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_edit_white_24dp" />

                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_source_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>